sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:10: error: not found: value pos1
    pos1=i
    ^AlgBubbleSort1:12: error: not found: value pos1
    test1=getValeur(pos1)
                    ^