sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i=0
  var test1=0
  var test2=0
  var maxpos=0
  var po1=0
  var pos2=0
  for(i<- 0 to 8){
    pos1=i
    pos2=i+1
    test1=getValeur(pos1)
    test2=getValeur(pos2)
    if (test1>test2){
      echange(test1,test2)
      maxpos=pos2
    }else{
      
    }
  }
}